k8s/voice-agent/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voice-agent
  namespace: prod
  labels:
    app: voice-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voice-agent
  template:
    metadata:
      labels:
        app: voice-agent
    spec:
      containers:
        - name: voice-agent
          image: us-central1-docker.pkg.dev/lively-synapse-495509-t0/smartedx-docker-repo/voice-agent:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: voice-agent
  namespace: prod
  labels:
    app: voice-agent
spec:
  selector:
    app: voice-agent
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
